Refine update-stats submission flow and keep Java 8 compatibility
- Simplify submit-update-stats-job CLI by removing limit and file-based JSON options, and centralize job options in command context

- Drop legacy updater option aliases for stats/all validation and tighten spark config requirements

- Restore Java 8 bytecode compatibility for maintenance jobs and related optimizer modules by relying on root compatibility rules

- Replace Java 9+ collection factories in optimizer-api/updaters code paths to preserve Java 8 compatibility

- Strengthen Spark update-stats integration test to assert exact table/partition metrics coverage and reorder the main env test for readability